--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 #Update all the sections by editing the data.yml file inside _data folder.
 
 # Site Settings
-title: My Resume
+title: Zara Weinberg, PhD
 url: 'https://weinberz.github.io/'
 # Style will be applied only after restarting the build or serve. Just choose one of the options.
 theme_skin: berry # blue turquoise green berry orange ceramic
