Updating work history

--- a/_data/data.yml
+++ b/_data/data.yml
@@ -88,7 +88,7 @@ experiences:
         - Synthetic biology approaches to sensing and manipulating cell signaling
 
     - role: Postdoctoral Scholar
-      time: 2017 - Present
+      time: 2017 - 2019
       company: Puthenveedu Lab, University of Michigan, Ann Arbor MI
       details: |
         - Developed technique for measuring GPCR exocytosis using live cell microscopy, and automated image analysis with machine learning deployed in MATLAB and Python.
